manifests/ingress.yml
apiVersion: networking.k8s.io/v1                                                                                                                                       
kind: Ingress                                                                                                                                                            
metadata:                                                                                                                                                                               
  name: example
  namespace: foo
spec:                                                                                                                                                                            
  ingressClassName: nginx
  rules:                                                                                                                                                                   
    - host: www.example.com
      http:                                                                                                                                                                 
        paths:                                                                                                                                                      
          - pathType: Prefix                                                                                                                                                      
            backend:                                                                                                                                                      
              service:                                                                                                                                                   
                name: exampleService
                port:                                                                                                                                                  
                  number: 80                                                                                                                                                  
            path: /
